--- a/input-picker-shared-style.html
+++ b/input-picker-shared-style.html
@@ -56,6 +56,10 @@ shared styles of the picker elements
                       0 3px 3px -2px rgba(0, 0, 0, 0.4);
         };
         --input-icon: {
+          border-radius: 2px;
+          padding: 8px;
+          height: 16px;
+          width: 16px;
           background-color: transparent;
           transition: background-color 150ms cubic-bezier(0.6, 1, 0.2, 1);
           cursor: pointer;
@@ -73,12 +77,15 @@ shared styles of the picker elements
       input::-webkit-calendar-picker-indicator {
         color: currentColor;
       }
+      input[type=tel],
       input[type=text] {
         font-family: inherit;
         font-size: inherit;
         @apply --input-input;
       }
-      input[type=text]:focus
+      input[type=tel]:focus,
+      input[type=tel]:hover,
+      input[type=text]:focus,
       input[type=text]:hover {
         @apply --input-focus;
       }
