buttons inside picker, overlay-picker-mixin

--- a/input-picker-pattern.html
+++ b/input-picker-pattern.html
@@ -67,25 +67,19 @@
             display: inline-flex;
             position: relative;
           }
+          #buttons {
+            display: inline-flex;
+            position: relative;
+            align-items: center;
+            justify-content: flex-end;
+          }
           .icon {
-            border-radius: 2px;
+            border-radius: 4px;
             padding: 8px;
             height: 16px;
             width: 16px;
           }
-          .icon.button {
-            position: absolute;
-            right: 0;
-            top: auto;
-            bottom: auto;
-            transform: translate(200%, 0);
-            border-radius: 4px;
-            color: initial;
-            background: rgba(255,255,255, 0.66);
-            z-index: 1;
-            transform: translate(100%, 0);
-          }
-          .polyfill {
+          #polyfill {
             display: -webkit-inline-flex;
             display: inline-flex;
             align-items: center;
@@ -93,15 +87,10 @@
           #picker {
             display: flex;
             flex-direction: column;
-            padding: 0;
+            overflow: hidden;
           }
-          #picker > :not(:last-child) {
-            border-bottom-left-radius: 0 !important;
-            border-bottom-right-radius: 0 !important;
-          }
-          #picker > :not(:first-child) {
-            border-top-left-radius: 0 !important;
-            border-top-right-radius: 0 !important;
+          #picker[horizontal] {
+            flex-direction: row;
           }
         `;
       }
@@ -125,9 +114,8 @@
        */
       static get _polyfill() {
         return `
-          <div class="polyfill">
+          <div id="polyfill">
             ${this.replacementInputTemplate}
-            ${this._buttonTemplate}
           </div>
           ${this.pickerTemplate}
         `;
@@ -140,7 +128,7 @@
       static get _buttonTemplate() {
         return `
           ${super._buttonTemplate || ''}
-          <svg class="icon button close" hidden$="[[!opened]]" viewBox="0 0 24 24" on-click="close"><g><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/></g></svg>
+          <svg class="icon button close" hidden$="[[!opened]]" viewBox="0 0 24 24" on-click="close"><g><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></g></svg>
         `;
       }
 
@@ -159,7 +147,7 @@
        * @type {string}
        */
       static get replacementInputTemplate() {
-        return ``;
+        return '';
       }
 
       /**
@@ -168,8 +156,11 @@
        */
       static get pickerTemplate() {
         return `
-          <div id="picker"></div>
-        `;
+          <div id="picker">
+            <div id="buttons">
+              ${this._buttonTemplate}
+            <div>
+          </div>`;
       }
 
       static get properties() {
