--- a/input-picker-pattern.html
+++ b/input-picker-pattern.html
@@ -114,7 +114,7 @@
        */
       static get _polyfill() {
         return `
-          <div id="polyfill">
+          <div id="polyfill" on-click="open">
             ${this.replacementInputTemplate}
           </div>
           ${this.pickerTemplate}
@@ -128,7 +128,8 @@
       static get _buttonTemplate() {
         return `
           ${super._buttonTemplate || ''}
-          <svg class="icon button close" hidden$="[[!opened]]" viewBox="0 0 24 24" on-click="close"><g><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></g></svg>
+          <svg class="icon button confirm" viewBox="0 0 24 24" on-click="confirm"><g><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></g></svg>
+          <svg class="icon button cancel" hidden$="[[autoConfirm]]" viewBox="0 0 24 24" on-click="cancel"><g><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/></g></svg>
         `;
       }
 
@@ -215,19 +216,22 @@
           noCancelOnEscKey: {
             type: Boolean,
             value: false
+          },
+
+          /**
+           * Set to true to automaticly confirm the input.
+           */
+          autoConfirm: {
+            type: Boolean,
+            value: false
           }
 
         }
       }
 
       connectedCallback() {
+        this._ensureAttribute('tabindex', 0);
         super.connectedCallback();
-        this.addEventListener('click', this.open, false);
-      }
-
-      disconnectedCallback() {
-        super.disconnectedCallback();
-        this.removeEventListener('click', this.open, false);
       }
 
       /**
@@ -238,8 +242,18 @@
         if (super._checkKeycode) {
           super._checkKeycode(e);
         }
-        if (e && e.keyCode === 27 && !this.noCancelOnEscKey) {
-          this.close();
+        if (!e) {
+          return;
+        }
+        if (e.keyCode === 27 && !this.noCancelOnEscKey) { // esc
+          this.cancel();
+        }
+        if (e.keyCode === 13 || e.keyCode === 32) { // space || enter
+          if (this.opened) {
+            this.confirm();
+          } else {
+            this.open();
+          }
         }
       }
 
@@ -280,6 +294,36 @@
         }
         this.opened = !this.opened;
       }
+
+      /**
+       * confirms the input
+       * @param  {[type]} e Event
+       */
+      confirm(e) {
+        if (e && e.stopPropagation) {
+          e.stopPropagation();
+        }
+        if (super.confirm) {
+          super.confirm();
+        }
+        this.close();
+      }
+
+      /**
+       * cancels the input
+       * @param  {[type]} e Event
+       */
+      cancel(e) {
+        if (e && e.stopPropagation) {
+          e.stopPropagation();
+        }
+        if (super.cancel) {
+          super.cancel();
+        }
+        this.close();
+      }
+
+
     }
   }
 </script>
