--- a/input-picker-pattern.html
+++ b/input-picker-pattern.html
@@ -129,7 +129,7 @@
         return `
           ${super._buttonTemplate || ''}
           <svg class="icon button confirm" viewBox="0 0 24 24" on-click="confirm"><g><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></g></svg>
-          <svg class="icon button cancel" hidden$="[[autoConfirm]]" viewBox="0 0 24 24" on-click="cancel"><g><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/></g></svg>
+          <svg class="icon button cancel" hidden$="[[!meditated]]" viewBox="0 0 24 24" on-click="cancel"><g><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/></g></svg>
         `;
       }
 
@@ -219,13 +219,12 @@
           },
 
           /**
-           * Set to true to automaticly confirm the input.
+           * Set to true to activate mediation for confirming the input.
            */
-          autoConfirm: {
+          meditated: {
             type: Boolean,
             value: false
           }
-
         }
       }
 
@@ -239,21 +238,23 @@
        * @param  {[type]} e Event
        */
       _checkKeycode(e) {
-        if (super._checkKeycode) {
-          super._checkKeycode(e);
-        }
         if (!e) {
           return;
         }
-        if (e.keyCode === 27 && !this.noCancelOnEscKey) { // esc
-          this.cancel();
-        }
-        if (e.keyCode === 13 || e.keyCode === 32) { // space || enter
-          if (this.opened) {
+        if (this.opened) {
+          if (e.keyCode === 13 || e.keyCode === 32) { // space || enter
             this.confirm();
-          } else {
-            this.open();
+            return;
           }
+          if (e.keyCode === 27 && !this.noCancelOnEscKey) { // esc
+            this.cancel();
+            return;
+          }
+          if (super._checkKeycode) {
+            super._checkKeycode(e);
+          }
+        } else {
+          this.open();
         }
       }
 
@@ -322,7 +323,6 @@
         }
         this.close();
       }
-
 
     }
   }
