--- a/input-picker-pattern.html
+++ b/input-picker-pattern.html
@@ -279,7 +279,9 @@
         if (super.close) {
           super.close();
         }
-        this.opened = false;
+        setTimeout( () => {
+          this.opened = false;
+        })
       }
 
       /**
