--- a/input-picker-pattern.html
+++ b/input-picker-pattern.html
@@ -88,6 +88,7 @@
             display: flex;
             flex-direction: column;
             overflow: hidden;
+            flex-shrink: 0;
           }
           #picker[horizontal] {
             flex-direction: row;
@@ -129,7 +130,7 @@
         return `
           ${super._buttonTemplate || ''}
           <svg class="icon button confirm" viewBox="0 0 24 24" on-click="confirm"><g><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></g></svg>
-          <svg class="icon button cancel" viewBox="0 0 24 24" on-click="cancel"><g><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/></g></svg>
+          <svg class="icon button cancel" hidden$="[[!mediated]]" viewBox="0 0 24 24" on-click="cancel"><g><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/></g></svg>
         `;
       }
 
@@ -206,6 +207,14 @@
            * disables the input elements
            */
           disabled: {
+            type: Boolean,
+            value: false
+          },
+
+          /**
+           * Set to true to make the input mediatable
+           */
+          mediated: {
             type: Boolean,
             value: false
           },
@@ -311,6 +320,11 @@
       cancel(e) {
         if (e && e.stopPropagation) {
           e.stopPropagation();
+        }
+        if (!this.mediated) {
+          this.confirm();
+          console.log('console');
+          return;
         }
         if (super.cancel) {
           super.cancel();
