--- a/overlay-element.html
+++ b/overlay-element.html
@@ -1,4 +1,4 @@
-<link rel="import" href="../polymer/polymer-element.html">
+<link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../iron-overlay-behavior/iron-overlay-behavior.html">
 
 <dom-module id="overlay-element">
