--- a/input-picker-shared-style.html
+++ b/input-picker-shared-style.html
@@ -14,7 +14,7 @@ shared styles of the picker elements
       --input-selected-background: var(--primary-color, #394FE8);
       --input-disabled-background: transparent;
       --input-selected-color: #f5f5f5;
-      --input-disabled-color: #2b2b2b;
+      --input-disabled-color: #9c9c9c;
     }
   </style>
 <custom-style>
