--- a/input-picker-shared-style.html
+++ b/input-picker-shared-style.html
@@ -51,6 +51,7 @@ shared styles of the picker elements
           background-color: var(--input-disabled-background);
           color: var(--input-disabled-color);
           font-weight: lighter;
+          cursor: default;
         };
         --input-element: {
           border-radius: 4px;
