--- a/input-picker-pattern.html
+++ b/input-picker-pattern.html
@@ -148,7 +148,7 @@
       static get _buttonTemplate() {
         return `
           ${super._buttonTemplate || ''}
-          <svg class="icon button confirm" viewBox="0 0 24 24" on-click="confirm"><g><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></g></svg>
+          <svg class="icon button confirm" viewBox="0 0 24 24" on-click="confirm" on-mouseup="close"><g><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></g></svg>
           <svg class="icon button cancel" hidden$="[[autoConfirm]]" viewBox="0 0 24 24" on-click="cancel"><g><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/></g></svg>
         `;
       }
@@ -329,7 +329,9 @@
         if (super.confirm) {
           super.confirm();
         }
-        this.close();
+        if (!this.autoConfirm) {
+          this.close();
+        }
       }
 
       /**
