--- a/input-picker-pattern.html
+++ b/input-picker-pattern.html
@@ -64,10 +64,14 @@
         return `
           ${super.customStyleContent || ''}
           :host {
+            display: -webkit-inline-flex;
+            display: -ms-inline-flexbox;
             display: inline-flex;
             position: relative;
           }
           #buttons {
+            display: -webkit-inline-flex;
+            display: -ms-inline-flexbox;
             display: inline-flex;
             position: relative;
             align-items: center;
@@ -81,11 +85,14 @@
           }
           #polyfill {
             display: -webkit-inline-flex;
-            display: inline-flex;
+            display: -ms-inline-flexbox;
+            display: inline-flex;;
             align-items: center;
           }
           #picker {
-            display: flex;
+            display: -webkit-inline-flex;
+            display: -ms-inline-flexbox;
+            display: inline-flex;
             flex-direction: column;
             flex-shrink: 0;
           }
@@ -210,7 +217,8 @@
            */
           horizontalAlign: {
             type: String,
-            reflectToAttribute: true
+            reflectToAttribute: true,
+            value: 'auto'
           },
           /**
            * The orientation against which to align the element vertically
