--- a/input-picker-shared-style.html
+++ b/input-picker-shared-style.html
@@ -1,24 +1,5 @@
 <link rel="import" href="../polymer/polymer.html">
 
-<!--
-`input-picker-shared-style`
-shared styles of the picker elements
--->
-
-<custom-style>
-  <style is="custom-style">
-    html {
-      /* initial values */
-      --input-background: #2b2b2b;
-      --input-color: #dadada;
-      --input-selected-background: var(--primary-color, #394FE8);
-      --input-disabled-background: transparent;
-      --input-selected-color: #f5f5f5;
-      --input-disabled-color: #9c9c9c;
-    }
-  </style>
-<custom-style>
-
 <dom-module id="input-picker-shared-style">
   <template>
     <style>
@@ -30,10 +11,16 @@ shared styles of the picker elements
         -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none;
         position: relative;
         box-sizing: content-box;
+        --input-color: #dadada;
+        --input-background: #2b2b2b;
+        --input-focus-color: #f5f5f5;
+        --input-focus-background: var(--primary-color, #394FE8);
+        --input-disabled-background: transparent;
+        --input-disabled-color: #888;
         /* initial mixins */
         --input-style: {
-          border-radius: 4px;
-          padding: 0.25em 0.1em;
+          border-radius: 3px;
+          padding: 0.2em 0.1em;
           border: none;
           outline: none;
           text-align: center;
@@ -44,8 +31,8 @@ shared styles of the picker elements
           transition: background-color 150ms cubic-bezier(0.6, 1, 0.2, 1);
         };
         --input-focus: {
-          background-color: var(--input-selected-background);
-          color: var(--input-selected-color);
+          background-color: var(--input-focus-background);
+          color: var(--input-focus-color);
         };
         --input-disabled: {
           background-color: var(--input-disabled-background);
@@ -53,14 +40,11 @@ shared styles of the picker elements
           font-weight: lighter;
           cursor: default;
         };
-        --input-element: {
-          border-radius: 4px;
-          padding: 4px;
-        };
         --input-picker: {
           box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14),
                       0 1px 8px 0 rgba(0, 0, 0, 0.12),
                       0 3px 3px -2px rgba(0, 0, 0, 0.4);
+          border-radius: 4px;
         };
         --input-icon: {
           border-radius: 2px;
