--- a/input-picker-pattern.html
+++ b/input-picker-pattern.html
@@ -1,4 +1,4 @@
-<link rel="import" href="input-picker-shared-style.html">
+<link rel="import" href="input-shared-style.html">
 <link rel="import" href="form-element-mixin.html">
 
 <script>
@@ -56,7 +56,7 @@
        * @type {string}
        */
       static get customStyleToInclude() {
-        return `${super.customStyleToInclude || ''} input-picker-shared-style`;
+        return `${super.customStyleToInclude || ''} input-shared-style`;
       }
 
       /**
@@ -104,6 +104,7 @@
           }
           #picker > * {
             padding: var(--input-picker-padding, 4px);
+            box-shadow: none !important;
           }
           #picker[horizontal] {
             flex-direction: row;
