--- a/input-shared-style.html
+++ b/input-shared-style.html
@@ -27,14 +27,14 @@
           text-align: center;
           cursor: pointer;
           box-sizing: content-box;
-          transition: background-color 150ms cubic-bezier(0.6, 1, 0.2, 1);
+          transition: background 150ms cubic-bezier(0.6, 1, 0.2, 1);
         };
         --input-focus: {
-          background-color: var(--input-focus-background);
+          background: var(--input-focus-background);
           color: var(--input-focus-color);
         };
         --input-disabled: {
-          background-color: var(--input-disabled-background);
+          background: var(--input-disabled-background);
           color: var(--input-disabled-color);
           font-weight: lighter;
           cursor: default;
@@ -50,8 +50,8 @@
           padding: 8px;
           height: 16px;
           width: 16px;
-          background-color: transparent;
-          transition: background-color 150ms cubic-bezier(0.6, 1, 0.2, 1);
+          background: transparent;
+          transition: background 150ms cubic-bezier(0.6, 1, 0.2, 1);
           cursor: pointer;
           fill: currentColor;
         };
