--- a/input-picker-pattern.html
+++ b/input-picker-pattern.html
@@ -23,7 +23,7 @@
    */
   const InputPickerPattern = (superClass) => { // eslint-disable-line no-unused-vars
 
-    return class extends FormElementMixin(superClass) {
+    return class extends FormElementMixin(superClass) { // eslint-disable-line no-undef
       /**
        * the expected input type, that should be polyfilled, if not available
        * @type {string}
@@ -90,12 +90,6 @@
             position: relative;
             align-items: center;
             justify-content: flex-end;
-          }
-          .icon {
-            border-radius: 4px;
-            padding: 8px;
-            height: 16px;
-            width: 16px;
           }
           #polyfill {
             display: -webkit-inline-flex;
