--- a/form-element-mixin.html
+++ b/form-element-mixin.html
@@ -58,7 +58,7 @@
       }
 
       _computeInvalid(required, value) {
-        this.invalid = Boolean(this.required && !this.value);
+        this.invalid = Boolean(required && !value);
       }
 
       /**
