--- a/input-shared-style.html
+++ b/input-shared-style.html
@@ -27,6 +27,8 @@
           text-align: center;
           cursor: pointer;
           box-sizing: content-box;
+          -webkit-background-clip: padding-box;
+          background-clip: padding-box;
           transition: background 150ms cubic-bezier(0.6, 1, 0.2, 1);
         };
         --input-focus: {
