--- a/overlay-picker-mixin.html
+++ b/overlay-picker-mixin.html
@@ -1,4 +1,6 @@
 <link rel="import" href="overlay-element.html">
+<link rel="import" href="input-shared-style.html">
+<link rel="import" href="dropdown-tip-style.html">
 
 <script>
   /**
@@ -68,6 +70,10 @@
             ${super.pickerTemplate}
           </overlay-element>
         `;
+      }
+
+      static get customStyleToInclude() {
+        return 'input-shared-style dropdown-tip-style';
       }
     }
   }
