native style, confirm button fix

--- a/input-picker-pattern.html
+++ b/input-picker-pattern.html
@@ -90,7 +90,6 @@
             display: inline-flex;;
             align-items: center;
             @apply --input-style;
-            padding: 0;
           }
           :host(:hover) #polyfill,
           :host(:focus) #polyfill {
@@ -193,7 +192,7 @@
       static get _buttonTemplate() {
         return `
           ${super._buttonTemplate || ''}
-          <button class="icon confirm" on-mouseup="close" tabindex="0"><svg viewBox="0 0 24 24" on-click="confirm"><g><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></g></svg></button>
+          <button class="icon confirm" on-mousedown="confirm" on-mouseup="close" tabindex="0"><svg viewBox="0 0 24 24" on-click="confirm"><g><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></g></svg></button>
           <button class="icon cancel" on-click="cancel" hidden$="[[autoConfirm]]" tabindex="0"><svg viewBox="0 0 24 24"><g><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/></g></svg></button>
         `;
       }
@@ -364,6 +363,7 @@
         if (e.keyCode === 13 || e.keyCode === 32) { // space || enter
           if (this.opened) {
             this.confirm();
+            this.close();
           } else {
             this.open();
           }
