switch mixin, outside click to close, dropdown style

--- a/form-element-mixin.html
+++ b/form-element-mixin.html
@@ -47,13 +47,22 @@
            */
           value: {
             type: String
+          },
+
+          /**
+           * is true when the value is not undefined
+           */
+          _valueIsSet: {
+            type: Boolean,
+            value: false
           }
         }
       }
 
       static get observers() {
         return [
-          '_computeInvalid(required, value)'
+          '_computeInvalid(required, value)',
+          '_computeValueIsSet(value)'
         ]
       }
 
@@ -64,6 +73,10 @@
 
       _computeInvalid(required, value) {
         this.invalid = Boolean(required && !value);
+      }
+
+      _computeValueIsSet(value) {
+        this._valueIsSet = value !== undefined;
       }
 
       /**
