--- a/dropdown-style.html
+++ b/dropdown-style.html
@@ -12,30 +12,32 @@ styles for used for a inner dropdown
         margin: 0;
         padding: 0;
         position: absolute;
+        visibility: hidden;
         opacity: 0;
-        transition: opacity 150ms cubic-bezier(0.6, 1, 0.2, 1);
+        transition: opacity 200ms cubic-bezier(0.6, 1, 0.2, 1);
         pointer-events: none;
+        z-index: 1;
       }
 
       :host([opened]) .dropdown {
+        visibility: visible;
         opacity: 1;
-        z-index: 1;
         pointer-events: all;
       }
 
       :host([vertical-align="bottom"]) .dropdown {
         top: 0; left: 0;
-        transform: translateY(-100%);
+        transform: translateY(calc(-100% - var(--dropdown-tip-size, 0px)));
       }
 
       :host([vertical-align="top"]) .dropdown {
         bottom: 0; left: 0;
-        transform: translateY(100%);
+        transform: translateY(calc(100% + var(--dropdown-tip-size, 0px)));
       }
 
       :host([horizontal-align="left"]) .dropdown {
         top: 0; right: 0; left: auto; bottom: auto;
-        transform: translateX(100%);
+        transform: translateX(calc(100% + var(--dropdown-tip-size, 0px)));
       }
 
       :host([horizontal-align="left"][vertical-align="bottom"]) .dropdown {
@@ -48,12 +50,12 @@ styles for used for a inner dropdown
 
       :host([horizontal-align="left"][vertical-align="auto"]) .dropdown {
         top: auto; bottom: 50%;
-        transform: translate(100%, 50%);
+        transform: translate(calc(100% + var(--dropdown-tip-size, 0px)), 50%);
       }
 
       :host([horizontal-align="right"]) .dropdown {
         top: 0; left: 0; right: auto; bottom: auto;
-        transform: translateX(-100%);
+        transform: translateX(calc(-100% - var(--dropdown-tip-size, 0px)));
       }
 
       :host([horizontal-align="right"][vertical-align="bottom"]) .dropdown {
@@ -66,7 +68,7 @@ styles for used for a inner dropdown
 
       :host([horizontal-align="right"][vertical-align="auto"]) .dropdown {
         top: auto; bottom: 50%;
-        transform: translate(-100%, 50%);
+        transform: translate(calc(-100% - var(--dropdown-tip-size, 0px)), 50%);
       }
 
       :host([vertical-align="auto"][horizontal-align="auto"]) .dropdown {
