--- a/input-shared-style.html
+++ b/input-shared-style.html
@@ -11,6 +11,7 @@
         -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none;
         position: relative;
         box-sizing: content-box;
+        --dropdown-tip-size: 6px;
         --input-color: #dadada;
         --input-background: #2b2b2b;
         --input-disabled-background: transparent;
@@ -18,28 +19,22 @@
         --input-focus-color: #f5f5f5;
         --input-focus-background: var(--primary-color, #394FE8);
         --input-invalid-color: #e83953;
+        --input-selection-color: var(--input-focus-color);
+        --input-selection-background: rgba(255,255,255,0.1);
         /* initial mixins */
         --input-style: {
-          display: inline-flex;
-          align-items: center;
-          outline: none;
-          padding: 0.1em 0.15em;
+          padding: 0.2em;
           border-radius: 4px;
-          border: none;
-          outline: none;
           text-align: center;
-          cursor: pointer;
-          -webkit-background-clip: padding-box;
-          background-clip: padding-box;
           transition: background 200ms cubic-bezier(0.6, 1, 0.2, 1);
         };
         --input-focus: {
-          background: var(--input-focus-background);
           color: var(--input-focus-color);
+          background: var(--input-focus-background);
         };
         --input-disabled: {
-          background: var(--input-disabled-background);
           color: var(--input-disabled-color);
+          background: var(--input-disabled-background);
           font-weight: lighter;
           cursor: default;
         };
@@ -56,48 +51,55 @@
           width: 16px;
           background: transparent;
           transition: background 200ms cubic-bezier(0.6, 1, 0.2, 1);
-          cursor: pointer;
         };
         --input-invalid: {
           border-color: var(--input-invalid-color);
         };
       }
+      select,
       input {
+        display: inline-flex;
+        align-items: center;
+        line-height: 1;
         outline: none;
-        border-color: transparent;
         font-family: inherit;
         font-size: inherit;
-        display: inline-flex;
+        -webkit-background-clip: padding-box;
+        background-clip: padding-box;
+        text-align: center;
+        cursor: pointer;
         @apply --input-style;
-        padding: 0.2em;
+        padding: 0.3em;
       }
+      input {
+        border: thin solid transparent;
+      }
+      select {
+        -moz-appearance: none;
+        -webkit-appearance: none;
+        appearance: none;
+        color: currentColor;
+        border-style: none;
+        text-align-last: center;
+        background: transparent;
+        background-image: none;
+      }
+      select:focus,
+      select:hover,
       input:hover {
+        outline: none;
         @apply --input-focus;
       }
-      ::-webkit-input-edit-text,
-      ::-webkit-input-placeholder,
-      ::-webkit-inner-spin-button,
-      ::-webkit-outer-spin-button,
-      ::-webkit-search-cancel-button,
-      ::-webkit-clear-button {
-        color: currentColor;
-        align-self: center;
-        cursor: pointer;
-      }
-      ::-webkit-search-cancel-button,
-      ::-webkit-clear-button {
-        mix-blend-mode: luminosity;
-      }
-      ::-moz-focus-inner {
-        border-style: none;
-        padding: 0;
-      }
-      ::-moz-focusring {
-        color: transparent;
-        border-style: none;
-        text-shadow: 0 0 0 transparent;
+      select:focus option,
+      select option {
+        outline: none;
+        font-family: inherit;
+        color: var(--input-color);
+        background: var(--input-background);
       }
       input:invalid {
+        border-width: thin;
+        border-style: solid;
         @apply --input-invalid;
       }
       input[disabled] {
@@ -107,6 +109,7 @@
         -moz-appearance: none;
         -webkit-appearance: none;
         appearance: none;
+        cursor: pointer;
         display: inline-flex;
         background: transparent;
         color: inherit;
@@ -131,6 +134,51 @@
       .icon:hover {
         outline: none;
         @apply --input-focus;
+      }
+      select:focus::-ms-value {
+        background: transparent;
+      }
+      select::-ms-expand {
+        display: none;
+      }
+      ::-webkit-input-edit-text,
+      ::-webkit-input-placeholder,
+      ::-webkit-inner-spin-button,
+      ::-webkit-outer-spin-button,
+      ::-webkit-search-cancel-button,
+      ::-webkit-clear-button {
+        color: currentColor;
+        align-self: center;
+        cursor: pointer;
+      }
+      ::-webkit-search-cancel-button,
+      ::-webkit-clear-button {
+        mix-blend-mode: luminosity;
+      }
+      ::-moz-selection {
+        color: inherit;
+        background: transparent;
+      }
+      :focus::-moz-selection {
+        color: var(--input-selection-color);
+        background: var(--input-selection-background);
+      }
+      ::selection {
+        color: inherit;
+        background: transparent;
+      }
+      :focus::selection {
+        color: var(--input-selection-color);
+        background: var(--input-selection-background);
+      }
+      ::-moz-focus-inner {
+        border-style: none;
+        padding: 0;
+      }
+      ::-moz-focusring {
+        border-width: 0
+        color: transparent;
+        text-shadow: 0 0 0 var(--input-focus-color, #000);
       }
       [hidden] {
         display: none !important;
