--- a/overlay-picker-mixin.html
+++ b/overlay-picker-mixin.html
@@ -1,6 +1,7 @@
 <link rel="import" href="overlay-element.html">
 <link rel="import" href="input-shared-style.html">
 <link rel="import" href="dropdown-tip-style.html">
+<link rel="import" href="../iron-overlay-behavior/iron-overlay-behavior.html">
 
 <script>
   /**
@@ -11,69 +12,48 @@
    */
   const OverlayPickerMixin = (superClass) => { // eslint-disable-line no-unused-vars
 
-    return class extends superClass {
+    return class extends Polymer.mixinBehaviors([Polymer.IronOverlayBehavior], superClass) { // eslint-disable-line no-undef
 
-      static get properties() {
-        return {
-          /**
-           * Set to true to keep overlay always on top.
-           */
-          alwaysOnTop: {
-            type: Boolean
-          },
-          /**
-           * Will position the element around the positionTarget without overlapping it.
-           */
-          noOverlap: {
-            type: Boolean,
-            value: false
-          },
-          /**
-           * Set to true to display a backdrop behind the overlay. It traps the focus
-           * within the light DOM of the overlay.
-           */
-          withBackdrop: {
-            type: Boolean,
-            value: false
-          },
-
-          /**
-           * Set to true to disable canceling the overlay by clicking outside it.
-           */
-          noCancelOnOutsideClick: {
-            type: Boolean,
-            value: false
-          },
-          /**
-           * If true, it will use `horizontalAlign` and `verticalAlign` values as preferred alignment
-           * and if there's not enough space, it will pick the values which minimize the cropping.
-           */
-          dynamicAlign: {
-            type: Boolean,
-            value: false
-          }
-        }
-      }
-
-      static get pickerTemplate() {
+      // static get pickerTemplate() {
+      //   return `
+      //     <overlay-element id="picker"
+      //       always-on-top="[[alwaysOnTop]]"
+      //       with-backdrop="[[withBackdrop]]"
+      //       no-cancel-on-outside-click="[[noCancelOnOutsideClick]]"
+      //       no-cancel-on-esc-key="[[noCancelOnEscKey]]"
+      //       no-overlap="[[noOverlap]]"
+      //       dynamic-align="[[dynamicAlign]]"
+      //       vertical-align="[[verticalAlign]]"
+      //       horizontal-align="[[horizontalAlign]]"
+      //       opened="{{opened}}">
+      //       ${super.pickerTemplate}
+      //     </overlay-element>
+      //   `;
+      // }
+      //
+      /**
+       * custom style content
+       * @type {string}
+       */
+      static get customStyleContent() {
         return `
-          <overlay-element id="picker"
-            always-on-top="[[alwaysOnTop]]"
-            with-backdrop="[[withBackdrop]]"
-            no-cancel-on-outside-click="[[noCancelOnOutsideClick]]"
-            no-cancel-on-esc-key="[[noCancelOnEscKey]]"
-            no-overlap="[[noOverlap]]"
-            dynamic-align="[[dynamicAlign]]"
-            vertical-align="[[verticalAlign]]"
-            horizontal-align="[[horizontalAlign]]"
-            opened="{{opened}}">
-            ${super.pickerTemplate}
-          </overlay-element>
-        `;
+          :host {
+            display: inline-flex !important;
+          }
+          ${super.customStyleContent || ''}
+        `
       }
+
 
       static get customStyleToInclude() {
         return 'input-shared-style dropdown-tip-style';
+      }
+
+      connectedCallback() {
+        super.connectedCallback();
+        this.positionTarget = this.$.polyfill;
+        this.sizingTarget = this.$.picker;
+        this.fit();
       }
     }
   }
